Правки по стилю 2